[gd_scene load_steps=3 format=3 uid="uid://ctylibfcjug76"]

[ext_resource type="Script" path="res://parts/Note.gd" id="1_mymrn"]
[ext_resource type="StyleBox" uid="uid://b4ts0xs184cax" path="res://assets/ui/popup-panel.stylebox" id="2_33xel"]

[node name="Note" type="GraphNode"]
offset_left = 29.0
offset_top = 9.0
offset_right = 132.0
offset_bottom = 131.0
mouse_filter = 1
theme_override_constants/separation = 5
title = "Note"
slot/0/left_enabled = false
slot/0/left_type = 1
slot/0/left_color = Color(0, 0, 1, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 1
slot/0/right_color = Color(0, 0, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color(0.980392, 1, 1, 1)
slot/1/left_icon = null
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color(0.980392, 1, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("1_mymrn")

[node name="ViewButton" type="Button" parent="."]
layout_mode = 2
text = "Open"

[node name="Tag" type="LineEdit" parent="."]
layout_mode = 2
alignment = 1
expand_to_text_length = true

[node name="C" type="CanvasLayer" parent="."]

[node name="Panel" type="PopupPanel" parent="C"]
unresizable = false
borderless = false
theme_override_styles/panel = ExtResource("2_33xel")

[node name="TextEdit" type="TextEdit" parent="C/Panel"]
offset_right = 100.0
offset_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="ViewButton" to="." method="_on_view_button_pressed"]
[connection signal="popup_hide" from="C/Panel" to="." method="_on_panel_popup_hide"]
[connection signal="size_changed" from="C/Panel" to="." method="_on_panel_size_changed"]
[connection signal="text_changed" from="C/Panel/TextEdit" to="." method="_on_text_edit_text_changed"]
